--- a/EnviromentalApp/Views/AllTicketsPage.xaml
+++ b/EnviromentalApp/Views/AllTicketsPage.xaml
@@ -27,8 +27,8 @@
             <DataTemplate>
                 <StackLayout>
                     <Label Text="{Binding ticketId}" FontSize="22"/>
-                    <Label Text="{Binding sensorId}" FontSize="22"/>
-                    <Label Text="{Binding Description}" FontSize="14" TextColor="Silver"/>
+                    <Label Text="{Binding Description}" FontSize="22"/>
+                    <Label Text="{Binding Status}" FontSize="14" TextColor="Silver"/>
                 </StackLayout>
             </DataTemplate>
         </CollectionView.ItemTemplate>
